--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/webpack-config": "^18.0.1",
     "axios": "^1.5.0",
-    "expo": "~49.0.8",
-    "expo-status-bar": "~1.6.0",
+    "expo": "48.0.0",
+    "expo-device": "^5.4.0",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-web": "~0.19.6"
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "@types/react": "~18.0.27",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
