--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.22.15",
     "@expo/webpack-config": "^18.0.1",
     "axios": "^1.5.0",
     "expo": "48.0.0",
