--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@babel/runtime": "^7.22.15",
     "@expo/webpack-config": "^18.0.1",
-    "axios": "^1.5.0",
+    "axios": "0.27.2",
     "expo": "48.0.0",
-    "expo-device": "^5.4.0",
+    "expo-device": "~5.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
