--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.22.15",
     "@expo/webpack-config": "^18.0.1",
+    "@native-html/css-processor": "^1.11.0",
     "axios": "0.27.2",
     "expo": "48.0.0",
     "expo-device": "~5.2.1",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-web": "~0.18.10"
   },
