--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.22.15",
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@native-html/css-processor": "^1.11.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "6.0.0",
+    "@types/react": "*",
+    "@types/react-native": "*",
     "axios": "0.27.2",
     "expo": "48.0.0",
     "expo-device": "~5.2.1",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-web": "~0.18.10",
-    "@types/react": "*",
     "react-native-screens": "~3.20.0",
-    "@types/react-native": "*",
-    "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/native": "6.0.0"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
