--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@expo/webpack-config": "^18.0.1",
     "@native-html/css-processor": "^1.11.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "6.0.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "@types/react": "*",
     "@types/react-native": "*",
     "axios": "0.27.2",
@@ -25,10 +26,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-navigation-stack": "react-navigation/stack"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
