--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
